# image-clef-2025-med-radiology

./: .gitignore  README.md  pyproject.toml
caption-prediction/: InstructBLIP_RAG_Plus.py  caption_baseline.py  rag_on_deepseek.py
caption-prediction/cluster_based_RAG/: CUI_cluster.py  cluster_image_rag_builder.py  cluster_image_rag_generator.py
concept-detection/: pyproject.toml
concept-detection/radiclef/: constants.py  cui_embedding.py  image_embedding.py  networks.py
concept-detection/radiclef.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
concept-detection/radiclef/experiments/conv_to_cui_seq/: analyze.py  config.json  inference.py
concept-detection/radiclef/experiments/conv_to_cui_seq/runs/2025-04-27_00-08-23_unige-poc/: config.json
concept-detection/resources/: concept-map.json
concept-detection/tests/: test.py  test_exp_conv_to_cui_seq.py
radiclef/: __init__.py  constants.py  cui_embedding.py  dataset_analysis.py  dataset_download.py  networks.py  umls_api.py  utils.py
radiclef/experiments/conv_to_cui_seq/: config.json  inference.py  main.py
radiclef/experiments/conv_to_cui_seq/runs/2025-05-11_09-41-48_unige-poc/: network.pth
resources/: concept-map.json
tests/: test.py  test_exp_conv_to_cui_seq.py  test_utils.py
